Update user swagger
